edited about.html, contacts.html and service.html

--- a/about.html
+++ b/about.html
@@ -43,35 +43,38 @@
 				<p>Wow Catering Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam fermentum, nulla luctus pharetra vulputate. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. </p>				
 			</div>
 		</div> <!-- .about-us -->
+		
+		<div class="about-gallery">
+			<div class="container">
+				<div class="about-us-slick">			
+					<div>
+						<img src="img/slide-1.jpg" alt="">
+						<div class="slick-text">
+							<h1>Преимущества</h1>
+							<h2>Wow Catering</h2>
+							<p>Wow Catering Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accums</p>
+						</div>
+					</div>
+					<div>
+						<img src="img/slide-1.jpg" alt="">
+						<div class="slick-text">
+							<h1>Преимущества 2</h1>
+							<h2>Wow Catering 2</h2>
+							<p>Wow Catering Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accums</p>
+						</div>
+					</div>
+					<div>
+						<img src="img/slide-1.jpg" alt="">
+						<div class="slick-text">
+							<h1>Преимущества 3</h1>
+							<h2>Wow Catering 3</h2>
+							<p>Wow Catering Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accums</p>
+						</div>
+					</div>				
+				</div>	
+			</div>				
+		</div><!-- .about-gallery -->
 
-		<div class="container">
-			<div class="about-us-slick">			
-				<div>
-					<img src="img/slide-1.jpg" alt="">
-					<div class="slick-text">
-						<h1>Преимущества</h1>
-						<h2>Wow Catering</h2>
-						<p>Wow Catering Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accums</p>
-					</div>
-				</div>
-				<div>
-					<img src="img/slide-1.jpg" alt="">
-					<div class="slick-text">
-						<h1>Преимущества 2</h1>
-						<h2>Wow Catering 2</h2>
-						<p>Wow Catering Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accums</p>
-					</div>
-				</div>
-				<div>
-					<img src="img/slide-1.jpg" alt="">
-					<div class="slick-text">
-						<h1>Преимущества 3</h1>
-						<h2>Wow Catering 3</h2>
-						<p>Wow Catering Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accums</p>
-					</div>
-				</div>				
-			</div>	
-		</div>	<!-- .about-us-slick	 -->
 
 		<div class="about-us">
 			<div class="container">
