--- a/service.html
+++ b/service.html
@@ -35,92 +35,96 @@
 
 	<div class="main">
 		<div class="services-wrap">
-			<div class="container">
-				<div class="service-about">
+			<div class="service-about">
+				<div class="container">
 					<h1>Услуги</h1>
 					<h2>Wow Catering</h2>
-					<p>Wow Catering Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
+					<p>Wow Catering Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>						
 				</div>
-				<div class="service-item">
-					<div class="service-desc">
-						<a href="#">
-							<img src="img/service-desc-img-1.jpg" alt="">
-							<span>Банкет</span>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam fermentum, nulla luctus pharetra vulputate.</p>
-						</a>
+			</div>
+			<div class="services-list">
+				<div class="container">
+					<div class="service-item">
+						<div class="service-desc">
+							<a href="#">
+								<img src="img/service-desc-img-1.jpg" alt="">
+								<span>Банкет</span>
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam fermentum, nulla luctus pharetra vulputate.</p>
+							</a>
+						</div>
 					</div>
-				</div>
-				<div class="service-item">
-					<div class="service-desc">
-						<a href="#">
-							<img src="img/service-desc-img-2.jpg" alt="">
-							<span>Выездное ресторанное обслуживание</span>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam fermentum, nulla luctus pharetra vulputate.</p>
-						</a>
+					<div class="service-item">
+						<div class="service-desc">
+							<a href="#">
+								<img src="img/service-desc-img-2.jpg" alt="">
+								<span>Выездное ресторанное обслуживание</span>
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam fermentum, nulla luctus pharetra vulputate.</p>
+							</a>
+						</div>
 					</div>
-				</div>
-				<div class="service-item">
-					<div class="service-desc">
-						<a href="#">
-							<img src="img/service-desc-img-3.jpg" alt="">
-							<span>Фуршет</span>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam fermentum, nulla luctus pharetra vulputate.</p>
-						</a>
+					<div class="service-item">
+						<div class="service-desc">
+							<a href="#">
+								<img src="img/service-desc-img-3.jpg" alt="">
+								<span>Фуршет</span>
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam fermentum, nulla luctus pharetra vulputate.</p>
+							</a>
+						</div>
 					</div>
-				</div>
-				<div class="service-item">
-					<div class="service-desc">
-						<a href="#">
-							<img src="img/service-desc-img-4.jpg" alt="">
-							<span>Свадьбы</span>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam fermentum, nulla luctus pharetra vulputate.</p>
-						</a>
+					<div class="service-item">
+						<div class="service-desc">
+							<a href="#">
+								<img src="img/service-desc-img-4.jpg" alt="">
+								<span>Свадьбы</span>
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam fermentum, nulla luctus pharetra vulputate.</p>
+							</a>
+						</div>
 					</div>
-				</div>
-				<div class="service-item">
-					<div class="service-desc">
-						<a href="#">
-							<img src="img/service-desc-img-5.jpg" alt="">
-							<span>Барбекю</span>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam fermentum, nulla luctus pharetra vulputate.</p>
-						</a>
+					<div class="service-item">
+						<div class="service-desc">
+							<a href="#">
+								<img src="img/service-desc-img-5.jpg" alt="">
+								<span>Барбекю</span>
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam fermentum, nulla luctus pharetra vulputate.</p>
+							</a>
+						</div>
 					</div>
-				</div>
-				<div class="service-item">
-					<div class="service-desc">
-						<a href="#">
-							<img src="img/service-desc-img-6.jpg" alt="">
-							<span>Кофе-брейки</span>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam fermentum, nulla luctus pharetra vulputate.</p>
-						</a>
+					<div class="service-item">
+						<div class="service-desc">
+							<a href="#">
+								<img src="img/service-desc-img-6.jpg" alt="">
+								<span>Кофе-брейки</span>
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam fermentum, nulla luctus pharetra vulputate.</p>
+							</a>
+						</div>
 					</div>
-				</div>
-				<div class="service-item">
-					<div class="service-desc">
-						<a href="#">
-							<img src="img/service-desc-img-7.jpg" alt="">
-							<span>Пикник</span>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam fermentum, nulla luctus pharetra vulputate.</p>
-						</a>
+					<div class="service-item">
+						<div class="service-desc">
+							<a href="#">
+								<img src="img/service-desc-img-7.jpg" alt="">
+								<span>Пикник</span>
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam fermentum, nulla luctus pharetra vulputate.</p>
+							</a>
+						</div>
 					</div>
-				</div>
-				<div class="service-item">
-					<div class="service-desc">
-						<a href="#">
-							<img src="img/service-desc-img-8.jpg" alt="">
-							<span>Коктейль</span>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam fermentum, nulla luctus pharetra vulputate.</p>
-						</a>
+					<div class="service-item">
+						<div class="service-desc">
+							<a href="#">
+								<img src="img/service-desc-img-8.jpg" alt="">
+								<span>Коктейль</span>
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam fermentum, nulla luctus pharetra vulputate.</p>
+							</a>
+						</div>
 					</div>
-				</div>
-				<div class="service-item">
-					<div class="service-desc">
-						<a href="#">
-							<img src="img/service-desc-img-9.jpg" alt="">
-							<span>Аренда</span>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam fermentum, nulla luctus pharetra vulputate.</p>
-						</a>
-					</div>
+					<div class="service-item">
+						<div class="service-desc">
+							<a href="#">
+								<img src="img/service-desc-img-9.jpg" alt="">
+								<span>Аренда</span>
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam fermentum, nulla luctus pharetra vulputate.</p>
+							</a>
+						</div>
+					</div>						
 				</div>
 			</div>
 		</div>
