--- a/contacts.html
+++ b/contacts.html
@@ -34,16 +34,19 @@
 	</div>
 
 	<div class="main">
-		<div class="container">
-			<div class="contacts">
+		<div class="contacts">
+			<div class="container">
 				<h1>Контакты</h1>
 				<h2>Wow Catering</h2>
 				<span>Харьков, 61024</span>
 				<span>ул. Гуданова 4\10</span>
 				<span>Тел.: (097) 905-05-50</span>
-				<span>contacts@wowpizza.com</span>				
+				<span>contacts@wowpizza.com</span>						
 			</div>
-			<div class="contact-form">
+		
+		</div>
+		<div class="contact-form">
+			<div class="container">
 				<form>
 					<div class="input-group w50">
 						<input type="text" name="userName" class="form-control" placeholder="Имя">
@@ -56,8 +59,9 @@
 					<div class="input-group w100">
 						<input type="submit" value="Отправить" class="btn">
 					</div>
-			 </form>				
+				</form>					
 			</div>
+			
 		</div>
 	</div>
 
